# dotfilr

./: .gitignore  Cargo.toml  README.md
src/: config.rs  directories.rs  error.rs  main.rs
